# flightplandb-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.md  flightplandb.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  run_test.sh  setup.cfg  setup.py
.github/workflows/: lint.yml  release.yml  test.yml  test_and_lint.yml  unittests.yml
docs/: index.rst
docs/source/: conf.py  flightplandb.rst  index.rst  userdocs.rst
docs/source/_static/css/: colourscheme.css  darkmode.css
docs/source/api/: api.rst  datatypes.rst  exceptions.rst  flightplandb.rst  internal.rst  main.rst  nav.rst  plan.rst  tags.rst  user.rst  weather.rst
docs/source/api/submodules/: plan.rst  tags.rst  user.rst  weather.rst
docs/source/user/: changelog.rst  introduction.rst  quickstart.rst  userdocs.rst
flightplandb/: __init__.py  datatypes.py  exceptions.py  flightplandb.py
flightplandb/exceptions/: exceptions.py  handler.py
flightplandb/submodules/: nav.py  plan.py  user.py  weather.py
src/FlightPlanDB/: __init__.py  flightplandb.py  response_types.py  types.py
src/flightplandb/: __init__.py  api.py  commands.py  datatypes.py  exceptions.py  flightplandb.py  internal.py  nav.py  plan.py  tags.py  types.py  user.py  weather.py
src/flightplandb/submodules/: __init__.py  api.py  nav.py  plan.py  tags.py  user.py  weather.py
tests/: __init__.py  auth_test.py  test_api.py  test_internal.py  test_nav.py  test_plan.py  test_tags.py  test_user.py  test_weather.py  unauth_test.py
