[metadata]
name = flightplandb
version=attr: flightplandb.__version__
author = PH-KDX
url = https://github.com/PH-KDX/flightplandb-py/
project_urls =
    Documentation = https://flightplandb-py.readthedocs.io/
    Issue tracker = https://github.com/PH-KDX/flightplandb-py/issues

description = Python wrapper for the Flight Plan Database API
long_description=file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Topic :: Games/Entertainment :: Simulation

[options]
include_package_data=True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    aiohttp >= 3.8.4;python_version >= '3.11'
    aiohttp >= 3.5.2;python_version < '3.11'
    python-dateutil~=2.8.2

[options.packages.find]
where=src

[options.extras_require]
dev = Sphinx==6.1.3; sphinx-rtd-theme==1.2.0
test = pytest~=7.2.1; pytest-socket~=0.6.0; pytest-asyncio~=0.20.3